--- a/files/windows/iaps/cloudwatch.config.json
+++ b/files/windows/iaps/cloudwatch.config.json
@@ -30,8 +30,6 @@
 					{
 						"event_format": "xml",
 						"event_levels": [
-							"VERBOSE",
-							"INFORMATION",
 							"WARNING",
 							"ERROR",
 							"CRITICAL"
@@ -39,6 +37,17 @@
 						"event_name": "System",
 						"log_group_name": "IAPS",
 						"log_stream_name": "system-events"
+					},
+					{
+						"event_format": "xml",
+						"event_levels": [
+							"WARNING",
+							"ERROR",
+							"CRITICAL"
+						],
+						"event_name": "Application",
+						"log_group_name": "IAPS",
+						"log_stream_name": "application-events"
 					}
 				]
 			}
@@ -46,10 +55,7 @@
 	},
 	"metrics": {
 		"append_dimensions": {
-			"AutoScalingGroupName": "${aws:AutoScalingGroupName}",
-			"ImageId": "${aws:ImageId}",
-			"InstanceId": "${aws:InstanceId}",
-			"InstanceType": "${aws:InstanceType}"
+			"AutoScalingGroupName": "${aws:AutoScalingGroupName}"
 		},
 		"metrics_collected": {
 			"LogicalDisk": {
@@ -66,6 +72,35 @@
 					"% Committed Bytes In Use"
 				],
 				"metrics_collection_interval": 60
+			},
+			"Paging File": {
+				"measurement": [
+					"% Usage"
+				],
+				"metrics_collection_interval": 60,
+				"resources": [
+					"*"
+				]
+			},
+			"PhysicalDisk": {
+				"measurement": [
+					"% Disk Time"
+				],
+				"metrics_collection_interval": 60,
+				"resources": [
+					"*"
+				]
+			},
+			"Processor": {
+				"measurement": [
+					"% User Time",
+					"% Idle Time",
+					"% Interrupt Time"
+				],
+				"metrics_collection_interval": 60,
+				"resources": [
+					"_Total"
+				]
 			},
 			"statsd": {
 				"metrics_aggregation_interval": 60,
