--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ env:
     GITHUB_ACCESS_TOKEN: "/jenkins/github/accesstoken"
 
 phases:
-  BUILD':
+  BUILD:
     #run-as: Linux-user-name
     commands:
       - echo $BRANCH_NAME'
