hardcoded branch name for test

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ version: 0.2
 env:
   variables:
     AWS_REGION:  'eu-west-2'
-    BRANCH_NAME: ${CODEBUILD_WEBHOOK_TRIGGER}
+    BRANCH_NAME: '34_DAM-1032-IAPS-AWS-CodePipeline-AMI-Build'
     TARGET_ENV:  'dev'
     ARTIFACT_BUCKET: 'tf-eu-west-2-hmpps-eng-dev-config-s3bucket'
     ZAIZI_BUCKET: 'tf-eu-west-2-hmpps-eng-dev-artefacts-s3bucket'
