--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,11 +7,10 @@ env:
     TARGET_ENV:  'dev'
     ARTIFACT_BUCKET: 'tf-eu-west-2-hmpps-eng-dev-config-s3bucket'
     ZAIZI_BUCKET: 'tf-eu-west-2-hmpps-eng-dev-artefacts-s3bucket'
-    FILENAME:     'iaps.json'
+    FILENAME:     'iaps-codebuild.json'
   parameter-store:
     WIN_ADMIN_PASS:  '/${TARGET_ENV}/jenkins/windows/slave/admin/password'
     GITHUB_ACCESS_TOKEN: "/jenkins/github/accesstoken"
-
 phases:
   install:
     commands:
