--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,11 +12,13 @@ env:
     WIN_ADMIN_PASS:  '/${TARGET_ENV}/jenkins/windows/slave/admin/password'
     GITHUB_ACCESS_TOKEN: "/jenkins/github/accesstoken"
 phases:
-  install:
+  pre_build:
     commands:
+      - echo "Installing Pre-Requisites"
       - ${CODEBUILD_SRC_DIR}/install-pre-reqs.sh
   build:
     commands:
       - echo $BRANCH_NAME
       - ${CODEBUILD_SRC_DIR}/packer-verify.sh 
       - ${CODEBUILD_SRC_DIR}/packer-build-windows.sh 
+      
