--- a/buildspec-linuxvm.yml
+++ b/buildspec-linuxvm.yml
@@ -9,7 +9,7 @@ env:
     ZAIZI_BUCKET: 'tf-eu-west-2-hmpps-eng-dev-artefacts-s3bucket'
     FILENAME:     'iaps-codebuild.json'
   parameter-store:
-    WIN_ADMIN_PASS:  '/${TARGET_ENV}/jenkins/windows/slave/admin/password'
+    WIN_ADMIN_PASS:  '/dev/jenkins/windows/slave/admin/password'
     GITHUB_ACCESS_TOKEN: "/jenkins/github/accesstoken"
 phases:
   pre_build:
