Updated to get S3 bucket names from SSM ParamStore

--- a/buildspec-linuxvm.yml
+++ b/buildspec-linuxvm.yml
@@ -5,12 +5,12 @@ env:
     AWS_REGION:  'eu-west-2'
     BRANCH_NAME: '34_DAM-1032-IAPS-AWS-CodePipeline-AMI-Build'
     TARGET_ENV:  'dev'
-    ARTIFACT_BUCKET: 'tf-eu-west-2-hmpps-eng-dev-config-s3bucket'
-    ZAIZI_BUCKET: 'tf-eu-west-2-hmpps-eng-dev-artefacts-s3bucket'
     FILENAME:     'codebuild/iaps-codebuild.json'
   parameter-store:
     WIN_ADMIN_PASS:  '/dev/jenkins/windows/slave/admin/password'
     GITHUB_ACCESS_TOKEN: "/jenkins/github/accesstoken"
+    ARTIFACT_BUCKET:     "/codebuild/artifact_bucket"
+    ZAIZI_BUCKET:        "/codebuild/zaizi_bucket"
 phases:
   pre_build:
     commands:
