--- a/files/windows/iaps/cloudwatch.config.json
+++ b/files/windows/iaps/cloudwatch.config.json
@@ -4,34 +4,40 @@
 			"files": {
 				"collect_list": [
 					{
+						"file_path": "c:\\ProgramData\\Amazon\\AmazonCloudWatchAgent\\Logs\\amazon-cloudwatch-agent.log",
+						"log_group_name": "/IAPS/amazon-cloudwatch-agent.log",
+						"log_stream_name": "{hostname}",
+						"timestamp_format": "%H: %M: %S%y%b%-d"
+					},
+					{
 						"file_path": "c:\\nginx\\nginx-1.17.6\\logs\\access.log",
-						"log_group_name": "IAPS",
-						"log_stream_name": "nginx-access-log"
+						"log_group_name": "/IAPS/access.log",
+						"log_stream_name": "{hostname}"
 					},
 					{
 						"file_path": "c:\\nginx\\nginx-1.17.6\\logs\\error.log",
-						"log_group_name": "IAPS",
-						"log_stream_name": "nginx-error-log"
+						"log_group_name": "/IAPS/error.log",
+						"log_stream_name": "{hostname}"
 					},
 					{
 						"file_path": "C:\\Program Files (x86)\\I2N\\IapsNDeliusInterface\\Log\\XMLTRANSFER.LOG",
-						"log_group_name": "IAPS",
-						"log_stream_name": "i2n-xmltransfer.log"
+						"log_group_name": "/IAPS/i2n-xmltransfer.log",
+						"log_stream_name": "{hostname}"
 					},
 					{
 						"file_path": "C:\\Program Files (x86)\\I2N\\IapsNDeliusInterface\\Log\\DAILY\\DAYSUMMARY.LOG",
-						"log_group_name": "IAPS",
-						"log_stream_name": "i2n-daysummary.log"
+						"log_group_name": "/IAPS/i2n-daysummary.log",
+						"log_stream_name": "{hostname}"
 					},
 					{
 						"file_path": "C:\\Program Files (x86)\\I2N\\IapsIMInterface\\Log\\IMIAPSIF.LOG",
-						"log_group_name": "IAPS",
-						"log_stream_name": "i2n-iapsif.log"
+						"log_group_name": "/IAPS/imiapsif.log",
+						"log_stream_name": "{hostname}"
 					},
 					{
 						"file_path": "c:\\Setup\\BackupLogs\\backup.log",
-						"log_group_name": "IAPS",
-						"log_stream_name": "Backup-IAPS-Configs.log"
+						"log_group_name": "/IAPS/backup.log",
+						"log_stream_name": "{hostname}"
 					}  
 				]
 			},
@@ -45,8 +51,8 @@
 							"CRITICAL"
 						],
 						"event_name": "System",
-						"log_group_name": "IAPS",
-						"log_stream_name": "system-events"
+						"log_group_name": "/IAPS/system-events",
+						"log_stream_name": "{hostname}"
 					},
 					{
 						"event_format": "xml",
@@ -56,8 +62,8 @@
 							"CRITICAL"
 						],
 						"event_name": "Application",
-						"log_group_name": "IAPS",
-						"log_stream_name": "application-events"
+						"log_group_name": "/IAPS/application-events",
+						"log_stream_name": "{hostname}"
 					}
 				]
 			}
